packages/documents/src/css/custom.css
/* ... */
div.main-wrapper > div > main > div > div > article > section > article a,
div.main-wrapper
  > div
  > main
  > div
  > div
  > article
  > section
  > article
  a:hover {
  padding: 16px !important;
  box-shadow: none;
}

div.main-wrapper > div > main > div > div > article > section > article a h2 {
  margin-left: -0.5ch;
  margin-bottom: 0.25em;
}

div.main-wrapper
  > div
  > main
  > div
  > div
  > article
  > section
  > article
  a
  h2::first-letter {
  font-size: 0%;
}

pre {
  border: 1px solid var(--ifm-toc-border-color);
}

footer.footer {
  height: var(--ifm-footer-height);
  border-top: 1px solid var(--ifm-toc-border-color);
  background: none;
  display: flex;
  align-items: center;
}

footer.footer .container {
  width: calc(var(--recative-page-width) - 32px) !important;
  margin: 0 auto;
}

.footer__copyright {
  margin-right: 10px;
  text-align: right;
  font-size: var(--ifm-font-size-base);
  font-weight: 500;
}

.navbar.navbar--fixed-top {
  backdrop-filter: blur(10px);
  background: rgba(255, 255, 255, 0.7);
}

footer.footer .container.container-fluid {
  max-width: 100%;
  padding: 0;
}

.navbar__toggle {
  margin-right: 12px;
}

.navbar__toggle svg,
.navbar-sidebar__close svg,
.menu__link svg,
.navbar__item.navbar__link svg {
  display: none;
}

.navbar__toggle::after,
.navbar-sidebar__close::after,
.theme-edit-this-page::before {
  content: ' ';
  width: 22px;
  height: 22px;
  display: block;
}

.navbar__toggle::after {
  background: transparent url('/img/icons/menu.svg') center center no-repeat;
  background-size: contain;
}

.navbar-sidebar__close::after {
  background: transparent url('/img/icons/dismiss.svg') center center no-repeat;
  background-size: contain;
}

.navbar__item.navbar__link[href^='http'],
.menu__link[href^='http'] {
  padding-right: 22px;
  position: relative;
}

.navbar__item.navbar__link[href^='http']::after {
  right: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.navbar__item.navbar__link[href^='http']::after,
.menu__link[href^='http']::after {
  content: ' ';
  width: 20px;
  height: 20px;
  background: transparent url('/img/icons/link.svg') center center no-repeat;
  background-size: contain;
  display: inline-block;
}

.theme-edit-this-page {
  padding: 8px;
  border: 1px solid var(--ifm-toc-border-color);
  color: var(--ifm-color-primary-darker);
  font-weight: 600;
  transition: background 200ms;
}

.theme-edit-this-page::before {
  content: ' ';
  top: 0.275em;
  width: 1.4em;
  height: 1.4em;
  background: transparent url('/img/icons/drafts.svg') center center no-repeat;
  background-size: contain;
  margin: 0 4px 0 2px;
  display: inline-block;
  position: relative;
}

.theme-edit-this-page svg {
  display: none;
}

.theme-edit-this-page:hover {
  color: var(--ifm-color-primary-darker);
  text-decoration: none;
  background: var(--ifm-toc-border-color);
}

.blog-wrapper .main-wrapper > .container {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.blog-wrapper .main-wrapper > .container > .row > aside {
  min-width: var(--recative-sidebar-width);
  min-height: calc(100vh - var(--ifm-footer-height));
  margin-top: calc(-1 * var(--ifm-navbar-height));
  padding: 0 12px;
  border-right: 1px solid var(--ifm-toc-border-color);
  will-change: width;
  transition: width var(--ifm-transition-fast) ease;
  clip-path: inset(0);
}

.blog-wrapper .main-wrapper > .container > .row > aside a {
  font-size: var(--ifm-font-size-small);
}

.blog-wrapper .main-wrapper > .container > .row > main {
  width: 100%;
  max-width: calc(100% - var(--recative-sidebar-width));
  margin: 0 auto;
  padding-top: 2rem;
  padding-left: calc(var(--ifm-menu-link-padding-horizontal) + 12px);
  flex-grow: 1;
  --ifm-col-width: 100%;
}

.blog-wrapper .main-wrapper > .container > .row > main > * {
  max-width: 1320px;
  margin: 0 auto;
}

@media (max-width: 1400px) {
  :root {
    --recative-page-width: 100%;
  }
}

@media (max-width: 1400px) {
  .recative__doc_page_wrap .theme-doc-toc-desktop {
    display: none;
  }

  .recative__doc_page_wrap .container > .row {
    display: block;
  }

  .recative__doc_page_wrap .container > .row > .col {
    max-width: 100% !important;
  }
}

@media (max-width: 1200px) {
  :root {
    --recative-sidebar-width: 300px;
  }
}

@media (max-width: 996px) {
  .blog-wrapper .main-wrapper > .container > .row > main {
    max-width: 100% !important;
  }
}

.blog-wrapper .main-wrapper > .container > .row > main article h2 a {
  color: var(--ifm-heading-color);
}

.blog-wrapper .main-wrapper > .container > .row > aside > nav {
  top: calc(var(--ifm-navbar-height) + 0.7rem);
}

.blog-wrapper
  .main-wrapper
  > .container
  > .row
  > aside
  > nav
  > div:first-of-type {
  margin-bottom: 0 !important;
  padding: var(--ifm-menu-link-padding-vertical)
    var(--ifm-menu-link-padding-horizontal);
  font: var(--ifm-font-size-base) / var(--ifm-line-height-base)
    var(--ifm-font-family-base);
  color: var(--ifm-color-primary-darkest);
  font-weight: var(--ifm-font-weight-bold);
}

.blog-wrapper .main-wrapper > .container > .row > aside > nav > ul > li {
  margin-top: 0 !important;
  padding: var(--ifm-menu-link-padding-vertical)
    var(--ifm-menu-link-padding-horizontal);
  font: var(--ifm-font-size-base) / var(--ifm-line-height-base)
    var(--ifm-font-family-base);
  font-weight: var(--ifm-font-weight-semibold);
}

.blog-wrapper .main-wrapper > .container > .row > aside > nav > ul > li a {
  color: var(--ifm-menu-color);
}

.blog-wrapper
  .main-wrapper
  > .container
  > .row
  > aside
  > nav
  > ul
  > li
  a:hover {
  color: var(--ifm-menu-color);
  text-decoration: underline;
}

